# arduino-connecter

./: CMakeLists.txt  README.md  component_com_tty_win.cpp  conectord.cpp  connector-pipe.h  connector.cpp  connector.h  general-code.hpp  main.cpp
sketch-ard/: general-code.hpp  sketch-ard.ino
